# car-rental-system

./: .gitignore
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  test.py  test.sh
backend/scripts/: seed_admin.py
backend/src/: main.py
backend/src/api/middleware/: cors.py  error_handler.py  logging.py
backend/src/api/rest/: app.py  dependencies.py
backend/src/api/rest/routes/: admin.py  auth.py  bookings.py  damage.py  health.py  inventory.py  jobs.py  kyc.py  payments.py  users.py  webhooks.py
backend/src/config/: settings.py
backend/src/constants/: enums.py
backend/src/control/agents/: damage_agent.py  kyc_agent.py  vehicle_doc_agent.py
backend/src/core/exceptions/: base.py
backend/src/core/services/: admin_service.py  auth_service.py  booking_service.py  damage_service.py  inventory_service.py  job_service.py  kyc_service.py  payment_service.py  user_service.py  webhook_service.py
backend/src/data/clients/: postgres_client.py  redis_client.py  s3_client.py
backend/src/data/migrations/: env.py
backend/src/data/migrations/versions/: 0790fd97b5f7_create_vehicles_table.py  249ec9f25755_create_vehicles_table.py  684f0076c4eb_create_users_and_sessions_tables.py  e251541c0bb6_create_all_tables.py  ecae7ff4eede_create_bookings_payments_damagelogs_.py
backend/src/data/models/postgres/: async_job.py  booking.py  damage_log.py  payment.py  user.py  vehicle.py
backend/src/data/repositories/: booking_repository.py  damage_log_repository.py  job_repository.py  payment_repository.py  session_repository.py  user_repository.py  vehicle_repository.py
backend/src/observability/logging/: logger.py
backend/src/schemas/: admin.py  async_job.py  auth.py  booking.py  damage.py  kyc.py  payment.py  user.py  vehicle.py  webhook.py
backend/src/utils/: hashing.py  jwt.py  pricing.py
backend/src/workers/: celery_app.py  damage_worker.py  expiry_worker.py  kyc_worker.py  notification_worker.py  vehicle_doc_worker.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/context/: AuthContext.tsx  ToastContext.tsx
frontend/src/hooks/: usePageTitle.ts
frontend/src/lib/: axios.ts
frontend/src/pages/: NotFoundPage.tsx
(+61 files in other folders)
